# daphuulbot

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.discord  Dockerfile.thread_cleaner  LICENSE  Makefile.toml  Procfile
fixtures/kickstarter/: union-city-alliance.html
src/: feed.rs  lib.rs  main.rs
src/commands/: general.rs
src/feed/: kickstarter.rs
