[package]
name = "daphuulbot"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
lazy_static = "1.4.0"
linkify = "0.4"
regex = "1"
serenity = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
